# waldur-site-agent

./: .gitlab-ci.yml
examples/: nscale-config-example.yaml
plugins/nscale/: README.md  pyproject.toml
plugins/nscale/examples/: nscale-config.yaml
plugins/nscale/tests/: conftest.py  test_nscale_backend.py  test_nscale_client.py
plugins/nscale/waldur_site_agent_nscale/: __init__.py  backend.py  client.py  exceptions.py  schemas.py
waldur_site_agent/backend/: __init__.py
